<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightsteelblue"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="125dp">
        android:layout_weight="1.8"
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="15dp"
                android:textColor="@color/blue"
                android:layout_weight="1.8"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enombre"
                android:textSize="15dp"
                android:inputType="textPersonName"
                android:layout_weight="1"
                android:id="@+id/eNombre"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="15dp"
                android:textColor="@color/blue"
                android:layout_weight="1.8"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ecorreo"
                android:textSize="15dp"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:id="@+id/eCorreo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="15dp"
                android:textColor="@color/blue"
                android:layout_weight="1.8"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etelefono"
                android:textSize="15dp"
                android:inputType="phone"
                android:layout_weight="1"
                android:id="@+id/eTel"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:layout_weight="1.2"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ssexo"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:layout_weight="0.25"/>

            <RadioGroup

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left">
                <RadioButton android:id="@+id/femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fem"
                    android:textSize="15dp"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mas"
                    android:textSize="15dp"
                    android:onClick="onRadioButtonClicked"
                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="top"
            >

            <TextView
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:text="@string/sciudad"
                android:textSize="15dp"
                android:textColor="@color/red"
                android:layout_weight="0.53"
                android:layout_gravity="center_horizontal" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spin">

            </Spinner>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/shobbie"
                android:textSize="15dp"
                android:textColor="@color/red" />

            <CheckBox
                android:id="@+id/deporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deporte"
                android:textSize="15dp"
                android:onClick="onCheckboxClicked"
                />
            <CheckBox
                android:id="@+id/cine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cine"
                android:textSize="15dp"
                android:onClick="onCheckboxClicked"
                />
            <CheckBox
                android:id="@+id/videojuegos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videojuegos"
                android:onClick="onCheckboxClicked"
                />
            <CheckBox
                android:id="@+id/lectura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lectura"
                android:textSize="15dp"
                android:onClick="onCheckboxClicked"
                />
        </LinearLayout>

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/snacimiento"
                android:textSize="15dp"
                android:textColor="@color/red" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="124dp"
                android:id="@+id/fecha"
                android:calendarViewShown="false"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_weight="0.14">
            </DatePicker>
        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:layout_gravity="left"
        >


        <Button
            android:layout_width="68dp"
            android:layout_height="33dp"
            android:text="@string/boton"
            android:id="@+id/boton"
            android:textSize="10dp"
            android:textColor="@color/red"
            android:layout_row="0"
            android:layout_column="7"
            android:onClick=""
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snombre"
            android:textSize="15dp"
            android:id="@+id/snombre"
            android:layout_row="1"
            android:layout_column="8" />

        <TextView
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/ssexo"
            android:id="@+id/ssexo"
            android:layout_row="1"
            android:layout_column="11"
            android:onClick="showDatePickerDialog"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorreo"
            android:textSize="15dp"
            android:id="@+id/scorreo"
            android:layout_row="2"
            android:layout_column="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/sciudad"
            android:id="@+id/sciudad"
            android:layout_row="2"
            android:layout_column="11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/snacimiento"
            android:id="@+id/snacimiento"
            android:layout_row="3"
            android:layout_column="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/stelefono"
            android:id="@+id/stelefono"
            android:layout_row="3"
            android:layout_column="11" />

        <TextView
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/shobbie"
            android:id="@+id/shobbie"
            android:layout_row="4"
            android:layout_column="8"
            android:layout_columnSpan="3" />

    </GridLayout>



</LinearLayout>